# meridian

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: ci-set-version.mjs
src/: App.tsx  main.tsx  types.ts
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: jira.rs  lib.rs  main.rs  mcp.rs  search.rs  watchdog.rs  webview_procs.rs
src/components/: BranchSwitcher.tsx  BrowserPanel.tsx  ClaudeIcon.tsx  DiffPanel.tsx  EditorPanel.tsx  EmptyState.tsx  ErrorBoundary.tsx  FileEditor.tsx  FileFinder.tsx  FileTreePanel.tsx  FileTypeIcon.tsx  GitPanel.tsx  GitStatusPopup.tsx  MainEmptyState.tsx  MainTabBar.tsx  MediaViewer.tsx  NotesPanel.tsx  PaneLayout.tsx  PaneTabStrip.tsx  ProjectAvatar.tsx  ProjectRail.tsx  ProjectView.tsx  SearchPanel.tsx  SettingsDialog.tsx  SourceControlPanel.tsx  StatusBar.tsx  TabBar.tsx  TerminalPanel.tsx  TerminalSplit.tsx  Toaster.tsx  WindowControls.tsx
src/components/ui/: button.tsx  context-menu.tsx  dropdown-menu.tsx  select.tsx  switch.tsx
src/lib/: browserHistory.ts  claude.ts  diffTheme.ts  editorModels.ts  editorReveal.ts  format.ts  fuzzy.ts  media.ts  monaco.ts  nativeSurface.ts  notify.ts  paneModel.ts  paneTree.ts  persist.ts  reorder.ts  session.ts  settings.tsx  tauri.ts  terminalRegistry.ts  toast.ts  updater.tsx  useNativeSurfaceBounds.ts  utils.ts  watchdog.ts
src/lib/lsp/: client.ts  convert.ts  manager.ts  monacoBridge.ts  transport.ts
src/styles/: globals.css
