[package]
name = "meridian"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meridian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `unstable` enables multiple webviews per window (Window::add_child), used for
# embedded browser tabs.
tauri = { version = "2.7.0", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
# Opens URLs/paths with the OS default handler (ShellExecute on Windows). Used
# to launch the system browser for the Jira OAuth consent flow and external
# links — correctly resolves the default browser and preserves query strings.
tauri-plugin-opener = "2"
portable-pty = "0.9.0"
which = "8.0.3"
tauri-plugin-window-state = "2.4.1"
base64 = "0.22.1"
# Lightweight blocking HTTP client (bundled rustls) for the authenticated
# Claude usage endpoint and the Jira REST/OAuth calls. No async runtime needed;
# called via spawn_blocking.
ureq = { version = "2", features = ["tls"] }
# OS-native secret store for the Jira OAuth refresh token + client secret
# (Windows Credential Manager / macOS Keychain / Linux secret-service), so
# credentials never sit in a plaintext app-data file.
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
