[package]
name = "meridian"
version = "0.1.0"
description = "A terminal-forward, agentic development environment."
authors = ["tyler-builds"]
license = "MIT"
repository = "https://github.com/tyler-builds/meridian"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meridian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `unstable` enables multiple webviews per window (Window::add_child), used for
# embedded browser tabs.
tauri = { version = "2.7.0", features = ["unstable"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
# Self-update: checks the GitHub release feed (latest.json), verifies the
# minisign signature against the baked-in pubkey, and swaps the installed app.
# `process` provides the relaunch after a desktop update is applied.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Opens URLs/paths with the OS default handler (ShellExecute on Windows). Used
# to launch the system browser for the Jira OAuth consent flow and external
# links — correctly resolves the default browser and preserves query strings.
tauri-plugin-opener = "2"
portable-pty = "0.9.0"
which = "8.0.3"
tauri-plugin-window-state = "2.4.1"
base64 = "0.22.1"
# Lightweight blocking HTTP client (bundled rustls) for the authenticated
# Claude usage endpoint and the Jira REST/OAuth calls. No async runtime needed;
# called via spawn_blocking.
ureq = { version = "2", features = ["tls"] }
# OS-native secret store for the Jira OAuth refresh token + client secret
# (Windows Credential Manager / macOS Keychain / Linux secret-service), so
# credentials never sit in a plaintext app-data file.
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
# Cross-platform process enumeration (CPU% + RSS + parent links) powering the
# Resource Manager status-bar item. We only ever walk our own process tree.
sysinfo = "0.33"
# Filesystem watching for live file-tree updates. The mini debouncer coalesces
# rapid change bursts (file saves, branch switches, `npm install`) into a single
# notification and re-exports `notify` itself. On Windows it uses a single
# recursive ReadDirectoryChangesW handle per project root (cheap).
notify-debouncer-mini = "0.4"

# Windows-only: read WebView2's per-renderer-process frame URLs so the Resource
# Manager can attribute each embedded browser tab to its project. Versions match
# the ones Tauri/wry already lock, so the `with_webview` controller type unifies.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
# Per-process private working set (Task Manager's "Memory" column) so summing a
# process tree doesn't double-count pages Chromium shares between its processes.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
